<?xml version="1.0" encoding="utf-8"?>
<!-- androidx.preference用 https://developer.android.com/guide/topics/ui/settings.html -->
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:title="@string/preference_category_port"
        app:key="category_port">
        <jp.okiislandsh.library.android.preference.EditTextIntPreference
            app:key="ipm_int_main_port"
            app:title="@string/preference_main_port"
            app:summary="@string/preference_summary_main_port"
            app:defaultValue="2425"
            app:min="0"
            app:max="65535"
            app:dialogLayout="@layout/preference_edit_text_int" />
        <jp.okiislandsh.library.android.preference.EditTextIntPreference
            app:key="ipm_int_sub_port1"
            app:title="@string/preference_sub_port"
            app:summary="@string/preference_summary_sub_port"
            app:min="0"
            app:max="65535"
            app:dialogLayout="@layout/preference_edit_text_int"/>
        <jp.okiislandsh.library.android.preference.EditTextIntPreference
            app:key="ipm_int_sub_port2"
            app:title="@string/preference_sub_port2"
            app:min="0"
            app:max="65535"
            app:dialogLayout="@layout/preference_edit_text_int" />
    </PreferenceCategory>

    <PreferenceCategory
        app:title="@string/preference_category_enable_releasefiles"
        app:key="category_enable_releasefiles">
        <SwitchPreferenceCompat
            app:key="ipm_bool_enable_releasefiles_msg_all"
            app:title="@string/preference_enable_releasefiles"
            app:summary="@string/preference_summary_enable_releasefiles"
            app:singleLineTitle="false"
            app:defaultValue="false" />
    </PreferenceCategory>

</PreferenceScreen>