<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/status_container"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="2dp"
        app:layout_constraintBottom_toTopOf="@id/columnHeaderContainer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textServiceStatus"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:layout_gravity="center"
                android:layout_margin="2dp"
                android:gravity="center"
                android:textSize="20sp"
                android:textStyle="bold"
                android:background="@color/colorStatusBlue"
                android:text="@string/service_is_running" />

            <TextView
                android:id="@+id/buttonStartService"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:layout_margin="2dp"
                android:gravity="center"
                android:textSize="16sp"
                android:textStyle="bold"
                android:background="@drawable/clickable_status_blue_background"
                android:text="@string/start_service"/>

            <TextView
                android:id="@+id/buttonStopService"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:layout_margin="2dp"
                android:gravity="center"
                android:textSize="16sp"
                android:textStyle="bold"
                android:background="@drawable/clickable_status_blue_background"
                android:text="@string/stop_service"/>

        </LinearLayout>

        <TextView
            android:id="@+id/textNetInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="2dp"
            android:gravity="center"
            android:textSize="12sp"
            android:textStyle="bold"
            android:background="@color/colorStatusBlue"
            tools:text="255.255.255.255.255.255 / ブロードキャスト無し" />

        <FrameLayout
            android:id="@+id/nameContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorStatusBlue"
            android:layout_margin="2dp" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_gravity="center_vertical"
                    android:gravity="center"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    tools:text="HN hoge / GN fuga" />

                <ImageButton
                    android:id="@+id/buttonUserInfoEdit"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_gravity="end|center_vertical"
                    android:background="#0000"
                    android:padding="8dp"
                    android:scaleType="centerInside"
                    android:src="@android:drawable/ic_menu_edit" />
            </LinearLayout>

            <TextView
                android:id="@+id/textYourName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start|top"
                android:textSize="10sp"
                android:textStyle="bold"
                android:text="@string/your_name" />

        </FrameLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/columnHeaderContainer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/userList"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/status_container">

        <jp.okiislandsh.library.android.view.chain.WidthChainFrameLayout
            android:id="@+id/colTextNN"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:paddingLeft="1dp"
            android:paddingRight="1dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/label_nick_name" />
        </jp.okiislandsh.library.android.view.chain.WidthChainFrameLayout>

        <jp.okiislandsh.library.android.view.chain.WidthChainFrameLayout
            android:id="@+id/colTextGN"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:paddingLeft="1dp"
            android:paddingRight="1dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/label_group_name" />
        </jp.okiislandsh.library.android.view.chain.WidthChainFrameLayout>

        <jp.okiislandsh.library.android.view.chain.WidthChainFrameLayout
            android:id="@+id/colTextIP"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingLeft="1dp"
            android:paddingRight="1dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/label_ip" />
        </jp.okiislandsh.library.android.view.chain.WidthChainFrameLayout>
    </LinearLayout>

    <ListView
        android:id="@+id/userList"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:clipToPadding="false"
        android:divider="@android:color/transparent"
        android:dividerHeight="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/columnHeaderContainer" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/fabAlert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:visibility="gone"
        tools:visibility="visible"
        android:text="@string/menu_archives"
        android:textAllCaps="false"
        android:lines="1"
        app:icon="@drawable/ic_menu_archive"
        android:backgroundTint="@color/colorPrimary"
        android:textColor="#ffffffff"
        app:iconTint="#ffffffff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>